final fix env and clean build

--- a/src/.env
+++ b/src/.env
@@ -1,2 +1,3 @@
-VITE_SUPABASE_URL=https://SEU_PROJECT_ID.supabase.co
-VITE_SUPABASE_ANON_KEY=SUA_ANON_PUBLIC_KEY
+VITE_SUPABASE_URL=https://ayxhucqunkkribwakhpb.supabase.co
+VITE_SUPABASE_ANON_KEY=SUA_CHAVE_PUBLICA_AQUI
+
